--- a/index.html
+++ b/index.html
@@ -24,9 +24,9 @@
     </header>
 
     <form name="ki_match" method="POST" data-netlify="true" data-netlify-lambda="match" action="/success">
-        <input type="hidden" name="bot-field" />
-        <input type="hidden" name="form-name" value="ki_match" />
-
+    <input type="hidden" name="form-name" value="ki_match" />
+    
+    </form>
         <label for="q_sehnsucht">1. Was stresst dich im Alltag, und was möchtest du im Urlaub unbedingt **zurücklassen**?</label>
         <textarea name="q_sehnsucht" id="q_sehnsucht" rows="4" required placeholder="Bsp: 'Den Druck, ständig erreichbar zu sein'"></textarea>
 
