--- a/index.html
+++ b/index.html
@@ -1,20 +1,10 @@
 <!DOCTYPE html>
 <html lang="de">
-<head>
+    <<head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>KI-Ferien.de | Dein Seelen-Match</title>
-    <style>
-        /* ... CSS für die Lesbarkeit (wie zuvor besprochen) ... */
-        body { font-family: sans-serif; max-width: 600px; margin: 0 auto; padding: 20px; line-height: 1.6; background-color: #f4f4f9; }
-        header h1 { color: #0056b3; }
-        form { background: white; padding: 25px; border-radius: 8px; box-shadow: 0 4px 6px rgba(0, 0, 0, 0.1); }
-        label { display: block; margin-bottom: 15px; font-weight: bold; color: #333; }
-        input[type="text"], input[type="email"], textarea { width: 95%; padding: 10px; margin-top: 5px; border: 1px solid #ccc; border-radius: 4px; box-sizing: border-box; }
-        input[type="range"] { width: 95%; margin-top: 10px; }
-        button { background-color: #28a745; color: white; padding: 12px 20px; border: none; border-radius: 4px; cursor: pointer; font-size: 1.1em; margin-top: 20px; }
-        .range-info { display: flex; justify-content: space-between; font-size: 0.8em; color: #666; margin-top: 5px; }
-    </style>
+    <link rel="stylesheet" href="css/style.css"> 
 </head>
 <body>
 
