--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
     <div class="container">
         <img src="img/lotus.png" alt="KI-Ferien Logo" style="width: 40px; margin-bottom: 20px;"> 
         
-        <h1>Finde deinen inneren Frieden.</h1>
+        <h1>Finde die richtigen Ferien.</h1>
         <p class="subline">Die KI-Analyse für deinen Seelen-Urlaub.</p>
         
         <a href="#formular" class="cta-button">Zur KI-Analyse</a>
