--- a/index.html
+++ b/index.html
@@ -70,7 +70,7 @@
     </select>
 </div>
         <div class="form-card">
-            <label for="email">Deine beste E-Mail-Adresse (Hier erhältst du dein Ergebnis):</label>
+            <label for="email">Deine E-Mail-Adresse (Hier erhältst du dein Ergebnis):</label>
             <input type="email" id="email" name="email" required>
         </div>
         
