--- a/index.html
+++ b/index.html
@@ -80,6 +80,15 @@
 
     </form>
 </div>
-
+<footer style="margin-top: 80px; padding: 40px 0; border-top: 1px solid rgba(0,0,0,0.05); text-align: center; color: var(--color-stone);">
+    <div class="container">
+        <p style="font-size: 0.9em; margin-bottom: 10px;">&copy; 2026 KI-Ferien – Dein Weg zur Ruhe.</p>
+        <nav>
+            <a href="legal.html" style="color: var(--color-stone); text-decoration: none; font-size: 0.85em; margin: 0 15px; opacity: 0.7;">Impressum</a>
+            <a href="legal.html" style="color: var(--color-stone); text-decoration: none; font-size: 0.85em; margin: 0 15px; opacity: 0.7;">Datenschutz</a>
+        </nav>
+    </div>
+</footer>
+</footer>
 </body>
 </html>
