--- a/legal.html
+++ b/legal.html
@@ -29,9 +29,9 @@
             <section>
                 <h2>Impressum</h2>
                 <p><strong>Betreiber der Website:</strong><br>
-                [Michael Strohmenger]<br>
+                Michael Strohmenger<br>
                 <br>
-                [69509 Mörlenbach </p>
+                69509 Mörlenbach </p>
                 
                 <p><strong>Kontakt:</strong><br>
                 E-Mail: info@ki-ferien.de<br>
