--- a/index.html
+++ b/index.html
@@ -1,9 +1,9 @@
 <!DOCTYPE html>
 <html lang="de">
-    <<head>
+    <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>KI-Ferien.de | Dein Seelen-Match</title>
+    <title>KI-Ferien.de | Deine Ferien Ziel KI </title>
     <link rel="stylesheet" href="css/style.css"> 
 </head>
 <body>
@@ -75,7 +75,7 @@
         </div>
         
         <button type="submit" class="cta-button" style="width: 100%; margin-top: 30px;">
-            MEIN SEELEN-MATCH FINDEN
+            MEIN FERIEN ZIEL FINDEN
         </button>
 
     </form>
@@ -88,7 +88,6 @@
             <a href="legal.html" style="color: var(--color-stone); text-decoration: none; font-size: 0.85em; margin: 0 15px; opacity: 0.7;">Datenschutz</a>
         </nav>
     </div>
-</footer>
 </footer>
 </body>
 </html>
