--- a/index.html
+++ b/index.html
@@ -5,6 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>KI-Ferien.de | Deine Ferien Ziel KI </title>
     <link rel="stylesheet" href="css/style.css"> 
+        <img src="img/logo.png" alt="KI-Ferien Logo" class="main-logo">
 </head>
 <body>
 
