--- a/index.html
+++ b/index.html
@@ -6,6 +6,7 @@
     <title>KI-Ferien.de | Deine Ferien Ziel KI </title>
     <link rel="stylesheet" href="css/style.css"> 
         <img src="img/logo.png" alt="KI-Ferien Logo" class="main-logo">
+        <link rel="icon" type="image/png" href="img/logo.png">
 </head>
 <body>
 
