--- a/index.html
+++ b/index.html
@@ -12,7 +12,9 @@
 
     <header class="hero-section">
     <div class="container">
-        <img src="img/lotus.png" alt="KI-Ferien Logo" style="width: 40px; margin-bottom: 20px;"> 
+        <div class="logo-wrapper">
+            <img src="img/logo.png" alt="KI-Ferien Logo" class="brand-logo-top">
+        </div>
         
         <h1>Finde die richtigen Ferien.</h1>
         <p class="subline">Die KI-Analyse für deinen Seelen-Urlaub.</p>
