--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
     </header>
 
     <div class="container" id="formular">
-        <form action="/netlify/functions/match" method="POST">
+        <form action="/.netlify/functions/match" method="POST">
             
             <div class="form-card">
                 <label for="q_sehnsucht">1. Welche Sehnsucht treibt dich an?</label>
