--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
     <header class="hero-section">
         <div class="container">
             <div class="logo-wrapper">
-                <img src="logo.png" alt="KI-FERIEN Logo" style="width: 280px; height: auto; max-width: 90vw; display: block; margin: 0 auto;">
+                <img src="img/logo.png" alt="KI-FERIEN Logo" style="width: 280px; height: auto; max-width: 90vw; display: block; margin: 0 auto;">
             </div>
             
             <h1>Finde die richtigen Ferien.</h1>
