--- a/index.html
+++ b/index.html
@@ -11,9 +11,9 @@
 
     <header class="hero-section">
         <div class="container">
-            <div class="logo-wrapper">
-                <img src="img/logo.png" alt="KI-FERIEN Logo" style="width: 280px; height: auto; max-width: 90vw; display: block; margin: 0 auto;">
-            </div>
+            <div style="text-align: center; padding: 20px 0;">
+    <img src="img/logo.png" alt="KI-FERIEN Logo" style="width: 280px; height: auto; max-width: 90vw; display: block; margin: 0 auto;">
+</div>
             
             <h1>Finde die richtigen Ferien.</h1>
             <p class="subline">Die KI-Analyse für deinen Seelen-Urlaub.</p>
