--- a/index.html
+++ b/index.html
@@ -10,9 +10,11 @@
 <body>
 
     <header class="hero-section">
-        <div class="container">
-            <div style="text-align: center; padding: 20px 0;">
-    <img src="img/logo.png" alt="KI-FERIEN Logo" style="width: 280px; height: auto; max-width: 90vw; display: block; margin: 0 auto;">
+    <div class="container">
+        <div style="text-align: center; padding: 20px 0;">
+            <img src="img/logo.png" alt="KI-FERIEN Logo" 
+                 style="width: 200px; height: 200px; object-fit: cover; border-radius: 50%; border: 3px solid white; box-shadow: 0 4px 15px rgba(0,0,0,0.1); max-width: 90vw; display: block; margin: 0 auto;">
+        </div>
 </div>
             
             <h1>Finde die richtigen Ferien.</h1>
