--- a/index.html
+++ b/index.html
@@ -11,9 +11,9 @@
 
     <header class="hero-section">
     <div class="container">
-        <div style="text-align: center; padding: 20px 0;">
-            <img src="img/logo.png" alt="KI-FERIEN Logo" 
-                 style="width: 200px; height: 200px; object-fit: cover; border-radius: 50%; border: 3px solid white; box-shadow: 0 4px 15px rgba(0,0,0,0.1); max-width: 90vw; display: block; margin: 0 auto;">
+        <div style="width: 220px; height: 220px; background: white; border-radius: 50%; display: flex; align-items: center; justify-content: center; margin: 0 auto; box-shadow: 0 4px 15px rgba(0,0,0,0.1);">
+    <img src="img/logo.png" alt="KI-FERIEN Logo" style="width: 180px; height: auto;">
+</div>
         </div>
 </div>
             
