--- a/index.html
+++ b/index.html
@@ -77,7 +77,16 @@
                     <option value="pisces">Fische</option>
                 </select>
             </div>
+<label for="vorname">Dein Vorname:</label>
+<input type="text" id="vorname" name="vorname" placeholder="z.B. Max" required>
 
+<label for="farbe">Deine Lieblingsfarbe:</label>
+<select id="farbe" name="farbe">
+  <option value="Blau">Blau (Ruhe & Meer)</option>
+  <option value="Grün">Grün (Natur & Wald)</option>
+  <option value="Rot">Rot (Energie & Abenteuer)</option>
+  <option value="Gelb">Gelb (Sonne & Optimismus)</option>
+</select>
             <div class="form-card">
                 <label for="email">Deine E-Mail-Adresse (Hier erhältst du dein Ergebnis):</label>
                 <input type="email" id="email" name="email" required>
