--- a/index.html
+++ b/index.html
@@ -109,12 +109,11 @@
                 <h3 style="margin-top: 0;">Impressum</h3>
                 <p>
                     <strong>Anbieter:</strong><br>
-                    [Dein Vorname] [Dein Nachname]<br>
-                    [Deine Straße & Hausnummer]<br>
-                    [PLZ] [Dein Ort]<br>
+                    Michael Strohmenger<br>
+                    69509 Mörlenbach<br>
                     <strong>Kontakt:</strong><br>
                     E-Mail: info@ki-ferien.de<br>
-                    <strong>Verantwortlich für den Inhalt:</strong> [Dein Name] (Anschrift wie oben)
+                    <strong>Verantwortlich für den Inhalt:</strong> Michael Strohmenger (Anschrift wie oben)
                 </p>
 
                 <hr style="border: 0; border-top: 1px solid #eee; margin: 20px 0;">
