--- a/index.html
+++ b/index.html
@@ -113,7 +113,7 @@
                     69509 Mörlenbach<br>
                     <strong>Kontakt:</strong><br>
                     E-Mail: info@ki-ferien.de<br>
-                    <strong>Verantwortlich für den Inhalt:</strong> Michael Strohmenger (Anschrift wie oben)
+                    <strong>Verantwortlich für den Inhalt:</strong> Michael Strohmenger 
                 </p>
 
                 <hr style="border: 0; border-top: 1px solid #eee; margin: 20px 0;">
