--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
     <link rel="icon" type="image/png" href="img/logo.png">
 </head>
 <body>
-
+<meta name="p:domain_verify" content="7711d58972e8f30344c5bbc392bd32e4"/>
     <header class="hero-section">
         <div class="container">
             <div style="width: 220px; height: 220px; background: white; border-radius: 50%; display: flex; align-items: center; justify-content: center; margin: 0 auto 30px auto; box-shadow: 0 4px 15px rgba(0,0,0,0.1);">
