--- a/index.html
+++ b/index.html
@@ -14,6 +14,10 @@
             backdrop-filter: blur(12px);
             border: 1px solid rgba(255, 255, 255, 0.3);
         }
+        /* Smooth transition for inputs */
+        input, select {
+            transition: all 0.2s ease-in-out;
+        }
     </style>
 </head>
 <body class="bg-gradient-main text-slate-900 min-h-screen">
@@ -31,6 +35,7 @@
             <p class="text-lg text-slate-500 max-w-xl mx-auto">Basierend auf Astrologie, deinen Vorlieben und deinen Hobbys berechnet unsere KI dein nächstes Traumziel.</p>
         </div>
 
+        <!-- Formular mit allen Feldern -->
         <form action="/.netlify/functions/match" method="POST" class="glass-card p-8 md:p-12 rounded-[2.5rem] shadow-2xl shadow-blue-900/10">
             <div class="grid grid-cols-1 md:grid-cols-2 gap-8">
                 
@@ -38,47 +43,61 @@
                 <div>
                     <label class="block text-sm font-semibold mb-2 ml-1">Dein Vorname</label>
                     <input type="text" name="vorname" required placeholder="z.B. Maria" 
-                           class="w-full px-5 py-4 rounded-2xl border border-slate-200 focus:ring-4 focus:ring-blue-100 focus:border-blue-500 outline-none transition-all bg-white/50">
+                           class="w-full px-5 py-4 rounded-2xl border border-slate-200 focus:ring-4 focus:ring-blue-100 focus:border-blue-500 outline-none bg-white/50">
                 </div>
 
                 <!-- Email -->
                 <div>
                     <label class="block text-sm font-semibold mb-2 ml-1">E-Mail Adresse</label>
                     <input type="email" name="email" required placeholder="deine@mail.com" 
-                           class="w-full px-5 py-4 rounded-2xl border border-slate-200 focus:ring-4 focus:ring-blue-100 focus:border-blue-500 outline-none transition-all bg-white/50">
+                           class="w-full px-5 py-4 rounded-2xl border border-slate-200 focus:ring-4 focus:ring-blue-100 focus:border-blue-500 outline-none bg-white/50">
                 </div>
 
                 <!-- Sternzeichen -->
                 <div>
                     <label class="block text-sm font-semibold mb-2 ml-1">Dein Sternzeichen</label>
-                    <select name="q_zodiac" required class="w-full px-5 py-4 rounded-2xl border border-slate-200 focus:ring-4 focus:ring-blue-100 focus:border-blue-500 outline-none transition-all bg-white/50 appearance-none">
-                        <option value="Widder">Widder</option>
-                        <option value="Stier">Stier</option>
-                        <option value="Zwillinge">Zwillinge</option>
-                        <option value="Krebs">Krebs</option>
-                        <option value="Löwe">Löwe</option>
-                        <option value="Jungfrau">Jungfrau</option>
-                        <option value="Waage">Waage</option>
-                        <option value="Skorpion">Skorpion</option>
-                        <option value="Schütze">Schütze</option>
-                        <option value="Steinbock">Steinbock</option>
-                        <option value="Wassermann">Wassermann</option>
-                        <option value="Fische">Fische</option>
-                    </select>
+                    <div class="relative">
+                        <select name="q_zodiac" required class="w-full px-5 py-4 rounded-2xl border border-slate-200 focus:ring-4 focus:ring-blue-100 focus:border-blue-500 outline-none bg-white/50 appearance-none cursor-pointer">
+                            <option value="Widder">Widder</option>
+                            <option value="Stier">Stier</option>
+                            <option value="Zwillinge">Zwillinge</option>
+                            <option value="Krebs">Krebs</option>
+                            <option value="Löwe">Löwe</option>
+                            <option value="Jungfrau">Jungfrau</option>
+                            <option value="Waage">Waage</option>
+                            <option value="Skorpion">Skorpion</option>
+                            <option value="Schütze">Schütze</option>
+                            <option value="Steinbock">Steinbock</option>
+                            <option value="Wassermann">Wassermann</option>
+                            <option value="Fische">Fische</option>
+                        </select>
+                        <div class="absolute inset-y-0 right-4 flex items-center pointer-events-none text-slate-400">
+                            <svg xmlns="http://www.w3.org/2000/svg" class="h-5 w-5" viewBox="0 0 20 20" fill="currentColor">
+                                <path fill-rule="evenodd" d="M5.293 7.293a1 1 0 011.414 0L10 10.586l3.293-3.293a1 1 0 111.414 1.414l-4 4a1 1 0 01-1.414 0l-4-4a1 1 0 010-1.414z" clip-rule="evenodd" />
+                            </svg>
+                        </div>
+                    </div>
+                </div>
+
+                <!-- Gefühlte Alter -->
+                <div>
+                    <label class="block text-sm font-semibold mb-2 ml-1">Gefühltes Alter</label>
+                    <input type="number" name="alter" required placeholder="z.B. 25" 
+                           class="w-full px-5 py-4 rounded-2xl border border-slate-200 focus:ring-4 focus:ring-blue-100 focus:border-blue-500 outline-none bg-white/50">
                 </div>
 
                 <!-- Lieblingsfarbe -->
                 <div>
                     <label class="block text-sm font-semibold mb-2 ml-1">Lieblingsfarbe</label>
                     <input type="text" name="farbe" placeholder="z.B. Ozeanblau" 
-                           class="w-full px-5 py-4 rounded-2xl border border-slate-200 focus:ring-4 focus:ring-blue-100 focus:border-blue-500 outline-none transition-all bg-white/50">
+                           class="w-full px-5 py-4 rounded-2xl border border-slate-200 focus:ring-4 focus:ring-blue-100 focus:border-blue-500 outline-none bg-white/50">
                 </div>
 
-                <!-- NEU: Hobbys & Sport -->
-                <div class="md:col-span-2">
-                    <label class="block text-sm font-semibold mb-2 ml-1">Hobbys & Sportarten im Urlaub</label>
-                    <input type="text" name="hobbys" placeholder="z.B. Surfen, Wandern, Museen, Yoga am Strand..." 
-                           class="w-full px-5 py-4 rounded-2xl border border-slate-200 focus:ring-4 focus:ring-blue-100 focus:border-blue-500 outline-none transition-all bg-white/50">
+                <!-- Hobbys & Sport -->
+                <div>
+                    <label class="block text-sm font-semibold mb-2 ml-1">Hobbys & Sportarten</label>
+                    <input type="text" name="hobbys" placeholder="z.B. Surfen, Wandern, Yoga" 
+                           class="w-full px-5 py-4 rounded-2xl border border-slate-200 focus:ring-4 focus:ring-blue-100 focus:border-blue-500 outline-none bg-white/50">
                 </div>
             </div>
 
@@ -87,7 +106,7 @@
             </button>
 
             <p class="text-center mt-6 text-xs text-slate-400">
-                Mit dem Klick akzeptierst du unsere <a href="/datenschutz.html" class="underline">Datenschutzbestimmungen</a>.
+                Mit der Nutzung akzeptierst du unsere <a href="/datenschutz.html" class="underline hover:text-blue-600">Datenschutzerklärung</a>.
             </p>
         </form>
     </main>
