--- a/impressum.html
+++ b/impressum.html
@@ -38,7 +38,7 @@
                 <div>
                     <h2 class="text-xl font-bold text-slate-800 mb-2">Kontakt</h2>
                     <p>
-                        E-Mail: info@KI-Ferien.de
+                        E-Mail: Mikostro@web.de 
                     </p>
                 </div>
 
