--- a/index.html
+++ b/index.html
@@ -52,7 +52,7 @@
     <main class="max-w-4xl mx-auto px-6 py-12">
         <div class="text-center mb-12">
             <span class="inline-block px-4 py-1.5 mb-4 text-xs font-bold tracking-widest text-blue-700 uppercase bg-blue-100 rounded-full">AI-Powered Travel Matching</span>
-            <h1 class="text-5xl md:text-6xl font-bold tracking-tight mb-4">Finde dein <span class="text-blue-600">Urlaubs-Match</span>.</h1>
+            <h1 class="text-5xl md:text-6xl font-bold tracking-tight mb-4">Finde dein <span class="text-blue-600">Ferien-Match</span>.</h1>
             <p class="text-lg text-slate-500 max-w-xl mx-auto">Unser Mistral-Modell analysiert deine psychografischen Daten und findet das Ziel, das wirklich zu deiner Seele passt.</p>
         </div>
 
