--- a/index.html
+++ b/index.html
@@ -36,6 +36,7 @@
             box-shadow: 0 0 10px rgba(37, 99, 235, 0.3);
         }
     </style>
+    <script src="match.js"></script>
 </head>
 <body class="bg-gradient-main text-slate-900 min-h-screen">
 
