--- a/index.html
+++ b/index.html
@@ -46,6 +46,14 @@
         }
     })();
 </script>
+    <script data-noptimize="1" data-cfasync="false" data-wpfc-render="false">
+  (function () {
+      var script = document.createElement("script");
+      script.async = 1;
+      script.src = 'https://emrldtp.cc/NDkyMDQ0.js?t=492044';
+      document.head.appendChild(script);
+  })();
+</script>
 </head>
 <body class="bg-gradient-main text-slate-900 min-h-screen">
 
