--- a/index.html
+++ b/index.html
@@ -53,6 +53,8 @@
             document.head.appendChild(script);
         })();
     </script>
+<script>function loadScript(a){var b=document.getElementsByTagName("head")[0],c=document.createElement("script");c.type="text/javascript",c.src="https://tracker.metricool.com/resources/be.js",c.onreadystatechange=a,c.onload=a,b.appendChild(c)}loadScript(function(){beTracker.t({hash:"d8c088248869b317f7d2dd1681a99852"})});</script>
+    
 </head>
 <body class="bg-gradient-main text-slate-900 min-h-screen">
 
