--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>KI-Ferien.de | Gruppen-Matching</title>
+    <title>KI-Ferien.de | Kosmische Ferien-Analyse</title>
     <style>
         body {
             font-family: 'Segoe UI', sans-serif;
